<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="update">Update</string>
    <string name="remoteconn_unavailable">Remote connection is unavailable at the moment.</string>
    <string name="remoteconn_please_wait">Loading...</string>
    <string name="history_unavailable">History cannot be restored from SD card.</string>
    <string name="crypto_unavailable">Password encryption is not supported on this device.</string>
    <string name="history_change">Click to specify where new readings will be saved</string>
    <string name="history_create">Create a new history...</string>
    <string name="history_create_title">Create a new history</string>
    <string name="history_create_done">History \"%1s\" has been created</string>
    <string name="history_name">History name</string>
    <string name="history_name_info">Enter a descriptive name, like \"Personal\" or \"Guests\", to categorize your readings</string>
    <string name="history_password">Password</string>
    <string name="history_password_verify">Password verification</string>
    <string name="history_password_info">You can optionally password protect your history. Use only alphanumeric characters, maximum length is 8. 
       Keep your password in a safe place. If it\'s lost, you won\'t be able to access the readings saved in the history</string>
    <string name="history_password_invalid">Password invalid</string>
    <string name="history_default">History</string>
    <string name="password_required">Password required</string>
    <string name="options_unavailable">Settings cannot be restored from SD card.</string>
    <string name="history_unsaveable">History cannot be stored to SD card.</string>
    <string name="history_unremovable">History cannot be removed from SD card.</string>
    <string name="options_unsaveable">Settings cannot be stored to SD card.</string>
    <string name="backup_error_create">Error creating backup.</string>
    <string name="backup_error_restore">Error restoring backup.</string>
    <string name="backup_restore_done">Backup has been restored.</string>
    <string name="backup_restore_confirm">Are you sure you want to restore backup? This operation can modify your current history.</string>
    <string name="history_no_destination">Please create a history where to move entries first</string>
    <string name="hex_reset_section">Are you sure you want to reset ALL this hexagram definitions?</string>
    <string name="item_select_hex">Select an Hexagram</string>
    <string name="item_select_dest_history">Select a destination history</string>
    <string name="options_view_hex">View Hexagram</string>
    <string name="options_view_edit_hex">View/Edit Hexagram</string>
    <string name="options_references">References</string>
    <string name="options_references_message">
        &lt;p&gt;
	        All the contents available to this application were found on the net.
	        In particular the most complete and freely available sources are:
	    &lt;/p&gt;
	    &lt;p&gt;
		    &lt;p&gt; http://wengu.tartarie.com/wg/wengu.php?l=Yijing&amp;no=0&lt;/p&gt;
		    &lt;p&gt; http://www.ichingonline.net/instruction.php&lt;/p&gt;
   		    &lt;p&gt; www.onlineclarity.co.uk/learn/consult/mml.php &lt;/p&gt;
		&lt;p&gt;
	    &lt;p&gt;
	        This application is by no mean affiliated to the listed references.
        &lt;/p&gt;
    </string>
    <string name="options_algo">Algorithms</string>
    <string name="options_algo_message">
        &lt;p&gt;
	        The program uses the three coins method to produce hexagram lines. 
        &lt;/p&gt;
        &lt;p&gt;
            The applicable changing lines are obtained through
            Master Yin\'s rules (default), Nanjing rules, or free interpretation.
        &lt;/p&gt;
        &lt;p&gt;
            Keep in mind, however, that as long as the algorithm can actually reach each and every
            possible combination of hexagrams and changing lines, it doesn\'t really matter which are the 
            probabilities each symbol can appear with, if you believe a supreme Force to be responsible 
            for the results.
        &lt;/p&gt;
    </string>
    <string name="options_about">About</string>
    <string name="options_about_message">
        &lt;p&gt;
	        This application is Open Source released under GNU GPL v3, distributed freely 
	        in the hope that it will be useful. The complete source code can be browsed and 
	        downloaded at:
	    &lt;/p&gt;
	    &lt;p&gt;
	        https://github.com/digitalillusion/org-digitalillusion-droid-iching
        &lt;/p&gt;
        &lt;p&gt;
        	If you want to contact me or if you spot any bug drop me an email at:	        
        &lt;/p&gt;
        	androidiching@altervista.org
        &lt;/p&gt;
        &lt;p&gt;
        	Thanks for your feedback, &lt;br/&gt;
        	namasté!
        &lt;/p&gt;
    </string>
    <string name="options_govegan">Author\'s note</string>
    <string name="options_govegan_message">
        &lt;p&gt;
        	Dear User, it is a complicate time to be alive and the ancient I Ching method,
            also in this modern shape, finds its utility. Since you are as well interested in
            understanding the Tao you are very likely to be a spiritual and far-sighted
            person. Therefore, I urge you about the need adopt a vegan lifestyle, if you didn\'t
            already. There are several reasons to do so: it is a choice of compassion, a deeper
            consciousness that brings wisdom and unity among sentient beings, in a world blinded
            by power and profit.
            It\'s the most effective choice that a single individual can make, encompassing
            the people, the planet and the animals altogether.
        &lt;/p&gt;
        &lt;p&gt;
        	\'\'For as long as men massacre animals, they will kill each other. He who
             sows the seed of murder and pain cannot reap joy and love.\'\' &lt;br/&gt;
        	--Pythagoras
        &lt;/p&gt;
   </string>
    <string name="options_settings">Settings</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_vibration_0">Off</string>
    <string name="settings_vibration_1">On Hexagram generation</string>
    <string name="settings_divination_method">Divination method</string>
    <string name="settings_divination_method_0">Toss coins (automatic)</string>
    <string name="settings_divination_method_1">Toss coins (manual)</string>
    <string name="settings_divination_method_2">Shake coins (manual)</string>
    <string name="settings_chlines_evaluator">Changing lines evaluator</string>
    <string name="settings_chlines_evaluator_0">Manual</string>
    <string name="settings_chlines_evaluator_1">Master Yin</string>
    <string name="settings_chlines_evaluator_2">Nanjing</string>
    <string name="settings_chlines_evaluator_3">Select changing</string>
    <string name="settings_lang">Language</string>
    <string name="settings_lang_en">English</string>
    <string name="settings_lang_es">Español</string>
    <string name="settings_lang_fr">Français</string>
    <string name="settings_lang_it">Italiano</string>
    <string name="settings_lang_pt">Português</string>
    <string name="settings_dictionary">Dictionary</string>
    <string name="settings_dictionary_altervista">Wilhelm (androidiching.altervista.org)</string>
    <string name="settings_dictionary_custom">Custom (local)</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_storage_sdcard">SD card</string>
    <string name="settings_storage_internal">Phone internal storage</string>
    <string name="settings_connection_mode">Connection mode</string>
    <string name="settings_connection_mode_online">Online</string>
    <string name="settings_connection_mode_offline">Offline</string>
    <string name="settings_share">Content to share</string>
    <string name="settings_share_page">Page</string>
    <string name="settings_share_hexagram">Hexagram</string>
    <string name="settings_share_reading">Reading</string>
    <string name="settings_screen_orientation">Screen orientation</string>
    <string name="settings_screen_orientation_rotate">Rotate</string>
    <string name="settings_screen_orientation_landscape">Landscape</string>
    <string name="settings_screen_orientation_portrait">Portrait</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_holo">Holo</string>
    <string name="settings_backup_and_restore">Backup and restore</string>
    <string name="settings_backup_and_restore_no_action"></string>
    <string name="settings_backup_and_restore_create_backup">Create backup</string>
    <string name="settings_backup_and_restore_restore_backup">Restore backup</string>
    <string name="hex01">乾 Ch\'ien / The Creative</string>
    <string name="hex02">坤 K\'un / The Receptive</string>
    <string name="hex03">屯 Chun / Difficulty at the Beginning</string>
    <string name="hex04">蒙 Mêng / Youthful Folly</string>
    <string name="hex05">需 Hsü / Waiting (Nourishment)</string>
    <string name="hex06">訟 Sung / Conflict</string>
    <string name="hex07">師 Shih / The Army</string>
    <string name="hex08">比 Pi / Holding Together (Union)</string>
    <string name="hex09">小 畜 Hsiao Ch\'u / The Taming Power of the Small</string>
    <string name="hex10">履 Lü / Treading (Conduct)</string>
    <string name="hex11">泰 T\'ai / Peace</string>
    <string name="hex12">否 P\'i / Standstill (Stagnation)</string>
    <string name="hex13">同 人 T\'ung Jên / Fellowship with Men</string>
    <string name="hex14">大 有 Ta Yu / Possession in Great Measure</string>
    <string name="hex15">謙 Ch\'ien / Modesty</string>
    <string name="hex16">豫 Yü / Enthusiasm</string>
    <string name="hex17">隨 Sui / Following</string>
    <string name="hex18">蠱 Ku / Work on What Has Been Spoiled (Decay)</string>
    <string name="hex19">臨 Lin / Approach</string>
    <string name="hex20">觀 Kuan / Contemplation (View)</string>
    <string name="hex21">噬 嗑 Shih Ho / Biting Through</string>
    <string name="hex22">賁 Pi / Grace</string>
    <string name="hex23">剝 Po / Splitting Apart</string>
    <string name="hex24">復 Fu / Return (The Turning Point)</string>
    <string name="hex25">無 妄 Wu Wang / Innocence (The Unexpected)</string>
    <string name="hex26">大 畜 Ta Ch\'u / The Taming Power of the Great</string>
    <string name="hex27">頤 I / Corners of the Mouth (Providing Nourishment)</string>
    <string name="intro_header">        The I Ching is a "reflection of the universe in miniature". 
        The word "I" has three meanings: ease and simplicity, change 
        and transformation, and invariability. Both of the two 
        branches of Chinese philosophy, Confucianism and Taoism, 
        have their common roots here.</string>
    <string name="intro_question_label">Pose your question to the Oracle:</string>
    <string name="intro_consult">Consult</string>
    <string name="intro_history_label">Or pick a question from your history:</string>
    <string name="read_changing_edit_section">Edit reading</string>
    <string name="read_changing_reset_section">Reset</string>
    <string name="read_share">Share</string>
    <string name="edit_section_quote">Quote:</string>
    <string name="edit_section_quote_info">This text will be displayed first, emphasized. It is usually a direct citation of the I Ching.</string>
    <string name="edit_section_reading">Reading:</string>
    <string name="edit_section_reading_info">Write here your own interpretation for this passage.</string>
</resources>