<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:padding="2dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:drawableLeft="@drawable/ic_launcher"
        android:focusable="false"
        android:text="@string/intro_header" android:gravity="center_horizontal|fill_horizontal" 
        android:paddingLeft="5dp" android:paddingRight="5dp" 
        android:drawablePadding="5dp" android:textSize="12sp"/>

    <LinearLayout
        android:id="@+id/layQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            android:text="@string/intro_question_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layQuestionGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <EditText
                android:id="@+id/etQuestion"
                android:layout_width="122dp"
				android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.52"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:lines="1"
                android:minHeight="20dp"
                android:minLines="2" >
            </EditText>

            <Button
                android:id="@+id/btnQuestion"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.40"
                android:onClick="onClickConsultBtn"
                android:text="@string/intro_consult"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layHistory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_history_label"
            android:textAppearance="?android:attr/textAppearanceSmall" android:textStyle="bold"/>

        <ListView
            android:id="@+id/lvHistory"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="true"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:fadingEdge="vertical" 
            android:padding="5dp"
            android:listSelector="@android:color/transparent"
            >
            <!-- Preview: listitem=@android:layout/simple_list_item_2 -->
        </ListView>
    </LinearLayout>

</LinearLayout>